--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/sharp-solid-svg-icons": "^6.2.1",
     "@uiw/react-markdown-preview": "^4.1.7",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/speed-insights": "^1.2.0",
     "babel-plugin-macros": "^3.1.0",
     "devicon": "^2.16.0",
     "framer-motion": "^8.5.0",
